--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ color: rgb(75, 222, 75);
 }
 
 .one {
-	background-image: url("appetizer.jpg");
+	background-image: url("https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/appetizer.jpg?v=1656087068477");
     width: 100%;
 	height: 300px;
 	background-size: cover;
@@ -528,7 +528,7 @@ color: rgb(75, 222, 75);
 }
 
 .two {
-	background-image: url("main dishes.jpg");
+	background-image: url("https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/main%20dishes.jpg?v=1656087135188");
 	width: 100%;
 	height: 300px;
 	background-size: cover;
@@ -541,7 +541,7 @@ color: rgb(75, 222, 75);
 }
 
 .three {
-	background-image: url("drinks.jpg");
+	background-image: url("https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/drinks.jpg?v=1656087180407");
 	width: 100%;
 	height: 300px;
 	background-size: cover;
@@ -554,7 +554,7 @@ color: rgb(75, 222, 75);
 }
 
 .four {
-	background-image: url("soup.jpg");
+	background-image: url("https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/soup.jpg?v=1656087230806");
 	width: 100%;
 	height: 300px;
 	background-size: cover;
@@ -567,7 +567,7 @@ color: rgb(75, 222, 75);
 }
 
 .five {
-	background-image: url("seafood.jpg");
+	background-image: url("https://cdn.glitch.me/ce1bbffa-743a-4896-a7f7-2c736ff3a148/seafood.jpg?v=1656087291427");
 	width: 100%;
 	height: 300px;
 	background-size: cover;
@@ -580,7 +580,7 @@ color: rgb(75, 222, 75);
 }
 
 .six {
-	background-image: url("cake.jpg");
+	background-image: url("https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/cake.jpg?v=1656087330590");
 	width: 100%;
 	height: 300px;
 	background-size: cover;
